[Android] Trying to add libraries