@@ -15,8 +15,6 @@ import android.widget.ImageButton;
 import android.widget.LinearLayout;
 import android.widget.TextView;
 
-import com.meetingninja.csse.R;
-
 public class HmsPicker extends LinearLayout implements Button.OnClickListener,
 		Button.OnLongClickListener {
 
@@ -175,7 +173,7 @@ public class HmsPicker extends LinearLayout implements Button.OnClickListener,
 		for (int i = 0; i < 10; i++) {
 			mNumbers[i].setOnClickListener(this);
 			mNumbers[i].setText(String.format("%d", i));
-			mNumbers[i].setTag(R.id.numbers_key, new Integer(i));
+			mNumbers[i].setTag(R.id.numbers_key, Integer.valueOf(i));
 		}
 		updateHms();
 
